assets/style/index.css
@import url('./reset.css');

:root {
  --body-bg-color: #171a22;
  --body-color: #fff;
  --input-bg-color: #272a33;
  --input-color: #fff;
  --button-bg-color: #009d5d;
  --button-color: #fff;
}

/* html */
body {
  background-color: var(--body-bg-color);
  color: var(--body-color);
}

/* class */
.box {
  background-color: #fff;
  border-radius: 15px;
  height: 150px;
  width: 300px;
}

.contacts {
  display: grid;
  gap: 20px;
  grid-template-columns: auto auto auto;
  margin-top: 50px;
}

.container {
  margin-inline: auto;
  width: min(100% - 30px, 1080px);
}

.flex {
  display: flex;
}

.grid {
  display: grid;
  /* grid-template-columns: 1fr 1fr 1fr; */
  /* height: 100vh; */
  place-content: center;
  place-items: center;
}

.input {
  font-size: 0px;
  justify-content: center;
  margin-top: 25px;
  height: 35px;
}

.title {
  font-size: 0px;
  justify-content: center;
  margin-top: 100px;
}

/* main */
main .title h1 {
  font-size: 24px;
  text-align: center;
}

main .input .input-field {
  background-color: var(--input-bg-color);
  color: var(--input-color);
  margin-right: 15px;
  padding-left: 15px;
  width: 300px;
}

main .input .input-field:focus {
  box-shadow: 0px 0px 3px rgba(255, 255, 255, 0.5);
}

main .input .button {
  background-color: var(--button-bg-color);
  color: var(--button-color);
  letter-spacing: 2px;
  text-shadow: 0px 0px 3px rgba(0, 0, 0, 1);
  /* text-transform: uppercase; */
  width: 100px;
}

main .input .button:hover {
  box-shadow: 0px 0px 3px rgba(255, 255, 255, 0.5);
}

main .input .input-field, .input .button {
  box-shadow: 0px 0px 1px rgba(255, 255, 255, 0.5);
  border-radius: 10px;
  font-size: 16px;
}

